# FaceDetection

./: README.md  settings.gradle
app/: build.gradle  memo.txt
app/src/androidTest/java/com/example/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/facedetection/: Change.java  Compare.java  DetectionBasedTracker.java  Gallery.java  Insert.java  MainActivity.java  MySQLite.java  Readme.java  Record.java  RecordCompare.java  ShotCompare.java  ShowData.java  UserInfo.java
app/src/main/jni/: CMakeLists.txt  DetectionBasedTracker_jni.cpp  rotate.cpp
app/src/main/res/layout/: activity_change.xml  activity_gallery.xml  activity_insert.xml  activity_main.xml  activity_readme.xml  activity_record.xml  activity_record_compare.xml  activity_shot_compare.xml  activity_show_data.xml  simple_adapter.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
openCVLibrary340/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
